style.css
:root {
    margin: 0;
    height: 100%;
    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    box-sizing: border-box;
}

body, h1, h2, h3, h4, p, button, input {
    margin: 0;
    padding: 0;
}


/* HEADER */
#header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px 250px;
}

#add-book {
    background-color: transparent;
    border: 2.5px solid black;
    border-radius: 5px;
    height: 45px;
    font-size: 1rem;
    font-weight: 500;
    padding: 10px 15px;
}

#add-book:hover {
    background-color: black;
    color: white;
}


/* CARDS */
#card-container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    grid-auto-rows: 220px;
    gap: 25px;
    padding: 40px;
    margin: 0px 100px;
    border: 3px solid black;
    border-radius: 5px;
    min-height: 700px;
}

.card {
    border: 2px solid black;
    border-radius: 2px;
    padding: 10px 25px;
    display: grid;
    grid-template-rows: 3fr 1fr;
    max-width: 400px;
}


/* CARD CONTENTS */
.card h2 {
    font-size: 35px;
    font-weight: 400;
    margin-bottom: 5px;
}

.card h3 {
    font-size: 20px;
    font-weight: 400;
    margin-bottom: 15px;
}

.card p {
    font-size: 15px;
    font-style: italic;
    margin-bottom: 10px;
}

.book-info {
    grid-row: 1 / 2;
}

.buttons {
    grid-row: 2;
    display: flex;
    justify-content: space-between;
    align-items: center;
}


/* REMOVE BUTTON */
.buttons :first-child {
    background-color: transparent;
    border: 2px solid black;
    border-radius: 5px;
    padding: 0;
    height: 35px;
    width: 75px;
    font-size: 13px;
}

/* READ STATUS */
.buttons :last-child {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 135px;
    height: 35px;
    background-color: transparent;
    border: 2px solid black;
    border-radius: 5px;
    padding: 0;
}

.buttons :last-child span {
    width: 55px;
    height: 55%;
    font-size: 13px;
    border: none;
    padding: 2px;
}

button.true :first-child, 
button.false :last-child {
  background: #000;
  color: #fff;
  border-radius: 5px;
}

.buttons :first-child:hover {
    background: black;
    color: #fff;
}


/* POP UP BOX */
dialog {
    height: 400px;
    width: 315px;
    padding-bottom: 30px;
}

#close {
    font-size: 20px;
    font-weight: 500;
    border: none;
    background-color: transparent;
    margin: 12px;
    align-self: flex-start;
}

form {
    display: flex;
}

form h1 {
    margin-top: 50px;
    margin-bottom: 45px;
    font-size: 28px;
    font-weight: 600;
}

#form-input {
    align-self: flex-end;
    margin-left: 20px;
}

input {
    margin-bottom: 35px;
    font-size: 15px;
    height: 20px;
    border: 0;
    border-bottom: 2px solid black;
    padding-left: 2px;
    padding-bottom: 2px;
}

input[type="text"] {
    width: 250px;
}


/* READ STATUS CHECKBOX */
.input-pair {
    display: flex;
}

.input-pair input[type="checkbox"]{
    margin-top: 1px;
    margin-left: 10px;
    border: 1px solid black;
}



#submit {
    background-color: transparent;
    border: 2px solid black;
    border-radius: 5px;
    padding: 0;
    height: 35px;
    width: 75px;
    font-size: 15px;
    font-weight: 400;
}

#submit:hover {
    background-color: black;
    color: white;
}

input:focus {
    outline: none;
}

.row {
    position: relative;
    display: flex; 
    flex-direction: column;
}

.row label {
    position: absolute;
    pointer-events: none;
    transform: translate(0, 2px) scale(1);
    transform-origin: top left;
    transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
    color: #777;
    font-size: 16px;
    line-height: 1;
    left: 2px;
}

.row:focus-within label {
    transform: translate(0, -20px) scale(0.8);
    color: #000;
}

label.input-present {
    color: transparent;
}

@media (max-width: 789px) {

    #add-book {
        min-width: 110px;
        margin-left: 15px;
    }

    #add-book span {
        font-size: 12px;
    }

    #header h1 {
        font-size: 20px;
        margin-right: 15px;
    }

    #header {
        justify-content: center;
    }
}

